[tool.poetry]
name = "telegramcryptobot"
version = "0.1.0"
description = ""
authors = ["PlayErphil <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.1.1"
requests = "^2.26.0"
millify = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
